--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Cozy House</title>
 	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 
