--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Cozy House</title>
 	<link rel="stylesheet" type="text/css" href="css.css">
+	<link rel="SHORTCUT ICON" href="animal2.png" type="image/x-icon">
 </head>
 
 <body>
