--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<meta charset="UTF-8">
 	<title>Cozy House</title>
 	<link rel="stylesheet" type="text/css" href="css.css">
-	<link rel="SHORTCUT ICON" href="animal2.png" type="image/x-icon">
+	<link rel="SHORTCUT ICON" href="animal1.png" type="image/x-icon">
+	<meta name="keywords" content="Притулок Безпритульні тварини Допомога безпритульним тваринам">
+	<meta name="description" content="Допомога тваринам які втратили своїх хазяйнів.Можливість пожертвувати на корм."> 
 </head>
 
 <body>
@@ -15,25 +17,25 @@
 	<header>
 		<div class="header">
 			<div class="logo">
-				<h2>Cozy House</h2>
-				<p>Shelter for pets in Boston</p>
+				<h2>Затишний будинок</h2>
+				<p>Притулок для домашніх тварин у Тернополі</p>
 			</div>
 			<nav>
 				<ul>
-					<li><a href="#">About the shelter</a></li>
-					<li><a href="#">Our pets</a></li>
-					<li><a href="#">To help the shelter</a></li>
-					<li><a href="#">Contacts</a></li>
+					<li><a href="#">Про притулок</a></li>
+					<li><a href="#">Наші тварини</a></li>
+					<li><a href="#">Допомога притулку</a></li>
+					<li><a href="#">Контакти</a></li>
 				</ul>
 			</nav>
 		</div>
 		<div class="title">
 			<div class="titlewrap">
-				<h1>Not only people need a house</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida
-					est in porttitor porttitor. Duis sodales elementum ipsum, vehicula
-					condimentum erat fringilla et.</p>
-				<button>Make a friend</button>
+				<h1>Не тільки люди потребують будинку</h1>
+				<p>Міжнародний день безпритульних тварин проходить щорічно у другій декаді серпня. У 1992 році його започаткувала Міжнародна спільнота прав тварин. Наразі цей день відзначають у понад 50 країнах і 6 континентах. Україна — одна з них.
+
+Метою започаткування цього дня є привернення уваги до проблем безпритульних тварин переважно собак та котів, які часто опиняються на вулиці через жорстокість та безвідповідальність людей.</p>
+				<button>Отримати тваринку</button>
 			</div>
 		</div>
 	</header>
