--- a/index.html
+++ b/index.html
@@ -45,13 +45,16 @@
 			<img src="about.png" alt="about.png">
 		</div>
 		<div class="about_text">
-			<h2>About the shelter </br>“Cozy House”</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce efficitur blandit condimentum. Proin
-				accumsan lorem vel gravida fringilla. Suspendisse potenti. Mauris ut pulvinar nunc.</p>
-			<p>Donec consectetur, diam in porta tempus, urna ligula vestibulum nibh, ac ornare felis justo nec leo.
-				Praesent mattis nibh quis ultrices pharetra. Morbi tempus at ante sit amet tristique. Maecenas dignissim
-				justo orci, in laoreet urna dapibus nec. Praesent quis tortor faucibus, tristique ante vitae, dignissim
-				lorem. Sed at ligula et sem mattis gravida ac vel erat. </p>
+			<h2>Про притулок</br>«Затишний будинок»</h2>
+			<p>Перш ніж купувати собаку чи кота – зайдіть до нас. У притулку знайдуться друзі будь-кому до душі – великі,
+				маленькі, охоронці, компаньйони, лінивці та непосидьки. Коли ми беремо тваринку з притулку,
+				то рятуємо одразу трьох: тваринку, яку забрали додому, бездомну тварину з вулиці,
+				що займе звільнене місце у притулку, і, звичайно, Людину в собі.</p>
+			<p>Притулок для тварин і фонд «Затишний будинок» заснував Руслан Осадця у 2010 році в с.Озерна Тернопільської області.
+				Вже десять років притулок піклується про бездомних тварин Тернополя та області, забезпечує їм проживання,
+				лікування, вакцинацію, стерилізацію, знаходить для них родини,
+				допомагає місту гуманно вирішувати проблему великої кількості бездомних тварин,
+				проводить роз’яснювальну роботу серед населення. Також фондом проводиться безкоштовна вакцинація та стерилізація.</p>
 		</div>
 	</section>
 
