--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 	<section class="friend">
 		<div class="titlebro">
-			<h2>Our friends who </br>are looking for a house</h2>
+			<h2>Наші друзі,</br> які шукають будинок</h2>
 		</div>
 		<div class="wrap_friend">
 		<button id="button_left"><img src="strl.png" alt=""></button>
@@ -69,40 +69,40 @@
 			<div id="animal">
 				<div class="animal1 animals">
 					<img src="animal1.png" alt="animal1.png">
-					<h3>Katrine</h3>
-					<button>Learn More</button>
+					<h3>Катріна</h3>
+					<button>Більше</button>
 				</div>
 				<div class="animal2 animals">
 					<img src="animal2.png" alt="animal2.png">
-					<h3>Jennifer</h3>
-					<button>Learn More</button>
+					<h3>Бобік</h3>
+					<button>Більше</button>
 				</div>
 				<div class="animal3 animals">
 					<img src="animal3.png" alt="animal3.png">
-					<h3>Woody</h3>
-					<button>Learn More</button>
+					<h3>Барсік</h3>
+					<button>Більше</button>
 				</div>
 				<div class="animal4 animals">
 					<img src="animal1.png" alt="animal1.png">
-					<h3>Woody</h3>
-					<button>Learn More</button>
+					<h3>Пушок</h3>
+					<button>Більше</button>
 				</div>
 				<div class="animal5 animals">
 					<img src="animal2.png" alt="animal2.png">
-					<h3>Woody</h3>
-					<button>Learn More</button>
+					<h3>Нюх</h3>
+					<button>Більше</button>
 				</div>
 				<div class="animal6 animals">
 					<img src="animal1.png" alt="animal1.png">
-					<h3>Woody</h3>
-					<button>Learn More</button>
+					<h3>Емілія</h3>
+					<button>Більше</button>
 				</div>
 			</div>
 		</div>
 		<button id="button_right"><img src="strr.png" alt=""></button>
 		</div>
 		<div class="animal_button">
-			<button>Get to know the rest</button>
+			<button>Познайомитися з рештою</button>
 		</div>
 	</section>
 
