--- a/index.html
+++ b/index.html
@@ -109,47 +109,47 @@
 
 	<section class="help">
 		<div class="titlebro">
-			<h2>Than you can help </br>our shelter</h2>
+			<h2>Чим ти можеш допомогти</br>нашому притулку</h2>
 		</div>
 		<div class="help_1">
 			<div class="helps">
 				<img src="help1.png" alt="help1.png">
-				<h3>Pet food</h3>
+				<h3>Їжа</h3>
 			</div>
 			<div class="helps">
 				<img src="help2.png" alt="help2.png">
-				<h3>Transportation</h3>
+				<h3>Транспортування</h3>
 			</div>
 			<div class="helps">
 				<img src="help3.png" alt="help3.png">
-				<h3>Toys</h3>
+				<h3>Іграшки</h3>
 			</div>
 			<div class="helps">
 				<img src="help4.png" alt="help4.png">
-				<h3>Bowls and cups</h3>
+				<h3>Миски для їжі</h3>
 			</div>
 			<div class="helps">
 				<img src="help5.png" alt="help5.png">
-				<h3>Shampoos</h3>
+				<h3>Миючі засоби</h3>
 			</div>
 		</div>
 
 		<div class="help_2">
 			<div class="helps">
 				<img src="help6.png" alt="help6.png">
-				<h3>Vitamins</h3>
+				<h3>Вітаміни</h3>
 			</div>
 			<div class="helps">
 				<img src="help7.png" alt="help7.png">
-				<h3>Medicines</h3>
+				<h3>Медикаменти</h3>
 			</div>
 			<div class="helps">
 				<img src="help8.png" alt="help8.png">
-				<h3>Collars / leashes</h3>
+				<h3>Ошейники</h3>
 			</div>
 			<div class="helps">
 				<img src="help9.png" alt="help9.png">
-				<h3>Sleeping area</h3>
+				<h3>Місцем для спання</h3>
 			</div>
 		</div>
 	</section>
