--- a/index.html
+++ b/index.html
@@ -162,15 +162,13 @@
 				<img src="donat.png" alt="donat.png">
 			</div>
 			<div class="donat_text">
-				<h2>In addition, you </br>can make a donation</h2>
-				<p id="first_p">Name of the bank / Type of bank account</p>
+				<h2>Крім того,</br> ви може зробити пожертву</h2>
+				<p id="first_p">Назва банку / Тип банківського рахунку</p>
 				<div class="donation">
 					<img src="card.png.png" alt="card.png.png">
 					<a href="#">8380 2880 8028 8791 7435</a>
 				</div>
-				<p>Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at
-					libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et
-					malesuada fames ac ante ipsum primis in faucibus. </p>
+				<p>Всі кошти ідуть на підтримку притулку. </p>
 			</div>
 		</div>
 	</section>
@@ -180,11 +178,11 @@
 		<div class="footers">
 			<div class="info">
 				<div class="infos">
-					<h2>For questions</br>br and suggestions</h2>
+					<h2>Для запитань</br>та пропозицій</h2>
 					<div class="information">
 						<div class="informations">
 							<img src="footer_1.png" alt="">
-							<a href="#">email@shelter.com</a>
+							<a href="#">ruslanosadsia@gmail.com</a>
 
 						</div>
 						<div class="informations">
@@ -195,16 +193,16 @@
 					</div>
 				</div>
 				<div class="infos">
-					<h2>We are waiting</br> for your visit</h2>
+					<h2>Ми чекаємо</br>на ваш візит</h2>
 					<div class="information">
 						<div class="informations">
 							<img src="footer_3.png" alt="">
-							<a href="#">Boston, Central Street, 1st</br> (Entrance from the store)</a>
+							<a href="#">Тернопільська обл с.Озерна</br>вул.Морозенка 7а</a>
 
 						</div>
 						<div class="informations">
 							<img src="footer_3.png" alt="">
-							<a href="#">London, South Park, 18st</a>
+							<a href="#">Тернопільська обл с.Озерна</br>вул.Морозенка 7а</a>
 
 						</div>
 					</div>
